syntax = "proto3";

package zksync.config.contracts;

message L1 {
  optional string governance_addr = 1; // required; H160
  optional string verifier_addr = 2; // required; H160
  optional string diamond_proxy_addr = 3; // required; H160
  optional string validator_timelock_addr = 4; // required; H160
  optional string default_upgrade_addr = 5; // required; H160
  optional string multicall3_addr = 6; // required; H160
}

message L2 {
  optional string testnet_paymaster_addr = 1; // optional; H160
}

message Bridge {
  optional string l1_address = 1;
  optional string l2_address = 2;
}

message Bridges {
  optional Bridge shared = 1; 
  optional Bridge erc20 = 2;
  optional Bridge weth = 3;
}

message Contracts {
  optional L1 l1 = 1;
  optional L2 l2 = 2;
  optional Bridges bridges = 3;
}
